@@ -646,7 +646,13 @@ DEFNUM_LITERAL	[+-]?[0-9]*[\.]*[0-9]+
 	cb_source_line++;
   }
   [,;]?[ ]+		{ /* ignore */ }
-  "."			{ yy_pop_state (); return DOT; }
+  \.([ \n]*\.)*		{
+	  if (strlen (yytext) > 1) {
+		  cb_warning (_("Ignoring redundant ."));
+	  }
+	  yy_pop_state ();
+	  return DOT;
+  }
   "=="			{ yy_push_state (PSEUDO_STATE); return EQEQ; }
   "("			{ return '('; }
   ")"			{ return ')'; }
